# usefulAlgorithm

./: README.md  findBigEmptyAngle.cpp  index.html
A Star Algorithm/: a.out  basic.cpp
A_Star_Algorithm/: README.md  basic.cpp  trace_path.cpp
Action List/src/: main.cpp
Action_List/src/: CMakeLists.txt  action.h
Differential_Drive_2_Wheel_Encoder/: README.md  test.cpp
Escape_else_if_programming/: README.md  if_elseif.cpp
Fast_Sin_Function/: 3  a.out  main.cpp
Find_Biggest_Square/: README.md
Find_Longest_Continuous_Subsequence/: README.md
Generate PCM Raw Data/: README.md  main.cpp
Generate_PCM_Raw_Data/: main.cpp
Sublime Text Settings/: README.md
else if 코딩 벗어나기/: README.md  scheduler.cpp
vim_개행문자제거/: README.md
webhook/: sender.js
가장 긴 연속부분 찾기/: README.md
가장 큰 정사각형 찾기/: README.md  findBiggestSquare.cpp
한글도메인/: README.md
